what I changed in the meeting with Ximena

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -8,15 +8,14 @@ Copy code
   <h1>Currency Symbols</h1>
 
   <ul>
-    <% if @symbols && !@symbols.empty? %>
-      <% @symbols.each do |symbol, description| %>
+    <% @symbols.each do |symbol| %>
         <li>
-          <%= symbol %>: <%= description %> <!-- Or adjust based on your structure -->
+          <a href="/<%= symbol %>" >
+          convert 1 <%= symbol %> to...
+          </a>
         </li>
       <% end %>
-    <% else %>
-      <li>No symbols found.</li>
-    <% end %>
+  
   </ul>
 </body>
 </html>
