created view pages

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -1,11 +1,5 @@
-Copy code
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Currency Symbols</title>
-</head>
-<body>
-  <h1>Currency Symbols</h1>
+
+  <h1>Currency pairs</h1>
 
   <ul>
     <% @symbols.each do |symbol| %>
@@ -17,5 +11,3 @@ Copy code
       <% end %>
   
   </ul>
-</body>
-</html>
