--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,11 +1,14 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title> Exchange Rates</title>
+    <title>Sinatra Exchange Rates</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
 
   <body>
-     <%= yield%>
+
+    <%= yield %>
+
   </body>
 </html>
